# solana-indexer

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
DOCS/: MONITORING.md  RELIABILITY.md
benches/: BENCHMARK_HISTORY.md  Cargo.toml  decoder_bench.rs  storage_bench.rs  throughput_bench.rs
docs/: ARCHITECTURE.md  WORKFLOW.excalidraw  architecture_diagram.mermaid
examples/: Cargo.toml  README.md  account_indexer.rs  backfill_indexer.rs  build.rs  helius_system_transfer.rs  idl_indexer.rs  jupiter_swap_indexer.rs  otel_helius_indexer.rs  otel_indexer.rs  otel_laserstream_indexer.rs  rpc_spl_token.rs  rpc_system_transfer.rs  system_transfer_indexer.rs  system_transfer_indexer_ws.rs  verify_shutdown.rs  ws_system_transfer.rs
solana-idl-parser/: Cargo.toml
solana-idl-parser/src/: generator.rs  lib.rs  model.rs
solana-idl-parser/tests/: generator_test.rs  idl.json  idl2.json  sdk_generator_test.rs  solraiser.json
solana-idl-parser/tests/generated_sdk/: generated_types.rs
solana-indexer-idl/: Cargo.toml
solana-indexer-sdk/: Cargo.toml  README.md  build.rs
solana-indexer-sdk/src/: lib.rs
solana-indexer-sdk/src/config/: mod.rs
solana-indexer-sdk/src/core/: backfill.rs  decoder.rs  indexer.rs  registry_metrics.rs
solana-indexer-sdk/src/core/backfill/: defaults.rs  engine.rs  manager.rs
solana-indexer-sdk/src/core/execution/: fetcher.rs  indexer.rs
solana-indexer-sdk/src/idl/: mod.rs
solana-indexer-sdk/src/storage/: mod.rs
solana-indexer-sdk/src/streams/: helius.rs  hybrid.rs  laserstream.rs  mod.rs  poller.rs  websocket.rs
solana-indexer-sdk/src/telemetry/: config.rs  mod.rs  otel.rs  subscriber.rs
solana-indexer-sdk/src/types/: backfill_traits.rs  traits.rs
solana-indexer-sdk/src/utils/: error.rs  logging.rs  mod.rs  retry.rs  rpc.rs
solana-indexer-sdk/tests/: decoder_test.rs  error_recovery_test.rs  handler_integration_test.rs  helius_tests.rs  hybrid_source_test.rs  indexer_test.rs  multi_program_test.rs  registry_test.rs  rpc_integration_test.rs  websocket_integration_test.rs
src/: decoder.rs  decoder_registry.rs  fetcher.rs  indexer.rs  lib.rs  main.rs  refactoring_plan.md  storage.rs  traits.rs
src/common/: config.rs  macros.rs  traits.rs  types.rs
src/config/: mod.rs
src/core/: account_registry.rs  backfill.rs  backfill_defaults.rs  decoder.rs  fetcher.rs  indexer.rs  log_registry.rs  mod.rs  registry.rs  registry_metrics.rs  reorg.rs
src/generator/: spl-transfer-generator.rs
src/sources/: poller.rs
src/storage/: mod.rs
src/streams/: helius.rs  mod.rs  poller.rs  websocket.rs
src/types/: backfill_traits.rs  events.rs  mod.rs  traits.rs
src/utils/: error.rs  logging.rs
tests/: account_tests.rs  decoder_test.rs  error_recovery_test.rs  fetcher_test.rs  handler_integration_test.rs  helius_tests.rs  indexer_test.rs  poller_test.rs  registry_test.rs  websocket_integration_test.rs
