[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2024"
default-run = "solana-indexer"

[dependencies]
anchor-lang = "0.30"
async-trait = "0.1.89"
borsh = "1.0"
chrono = "0.4"
colored = "2.2"
dotenvy = "0.15.7"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.21"
rayon = "1.11.0"

[[bin]]
name = "solana-indexer"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6.5"
