
[package]
name = "solana-indexer-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-indexer-sdk = { path = "../solana-indexer-sdk", features = ["websockets", "helius", "laserstream", "idl-build", "opentelemetry"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
solana-sdk = "1.18.26"
async-trait = "0.1.53"
borsh = "1.0"
solana-transaction-status = "1.18.26"
sqlx = { version = "0.7.4", default-features = false, features = [ "runtime-tokio-rustls", "postgres" ] }
solana-client = "1.18.26"
serde_json = "1.0.82"
bs58 = "0.5.0"
sha2 = "0.10"
tracing = "0.1"

[build-dependencies]
solana-indexer-idl = { path = "../solana-indexer-idl" }


[[example]]
name = "account_indexer"
path = "account_indexer.rs"


[[example]]
name = "generator_spl_transfer"
path = "generator_spl_transfer.rs"

[[example]]
name = "helius_system_transfer"
path = "helius_system_transfer.rs"

[[example]]
name = "jupiter_swap_indexer"
path = "jupiter_swap_indexer.rs"

[[example]]
name = "multi_program_indexer"
path = "multi_program_indexer.rs"

[[example]]
name = "raydium_indexer"
path = "raydium_indexer.rs"

[[example]]
name = "rpc_spl_token"
path = "rpc_spl_token.rs"

[[example]]
name = "rpc_system_transfer"
path = "rpc_system_transfer.rs"


[[example]]
name = "ws_system_transfer"
path = "ws_system_transfer.rs"


[[example]]
name = "idl_indexer"
path = "idl_indexer.rs"

[[example]]
name = "otel_indexer"
path = "otel_indexer.rs"
# This example requires the opentelemetry feature because it calls
# init_telemetry_with_otel and uses OtelConfig / OtlpProtocol.
required-features = ["solana-indexer-sdk/opentelemetry"]

[[example]]
name = "otel_laserstream_indexer"
path = "otel_laserstream_indexer.rs"
required-features = ["solana-indexer-sdk/opentelemetry", "solana-indexer-sdk/laserstream"]
