[package]
name = "solana-idl-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
anyhow = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
anchor-lang = "0.30"
borsh = "1.0"
solana-sdk = "1.18.26"
sha2 = "0.10"
heck = "0.5.0"
