[package]
name = "solana-indexer-idl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A procedural macro for auto-generating Solana types from Anchor IDLs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adithya-adee/solana-indexer"
repository = "https://github.com/adithya-adee/solana-indexer"
keywords = ["solana", "idl", "anchor", "proc-macro"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
anyhow = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
anchor-lang = "0.30"
borsh = "1.0"
solana-sdk = "1.18.26"
sha2 = "0.10"
heck = "0.5.0"
