[package]
name = "solana-indexer-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A developer-centric SDK for Solana blockchain data indexing"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adithya-adee/solana-indexer"
repository = "https://github.com/adithya-adee/solana-indexer"
keywords = ["solana", "indexer", "blockchain", "web3"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
anchor-lang = "0.30"
async-trait = "0.1.89"
borsh = "1.0"
chrono = "0.4"
colored = "2.2"
dotenvy = "0.15.7"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rayon = "1.11.0"
log = "0.4.29"
tokio-util = { version = "0.7.18", features = ["full"] }

[dev-dependencies]
honggfuzz = "0.5"
arbitrary = { version = "1.0", features = ["derive"] }
quinn-proto = { version = "0.10", features = ["arbitrary"] }
wiremock = "0.6.5"
