[package]
name = "solana-indexer-sdk"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
description = "A developer-centric SDK for Solana blockchain data indexing"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adithya-adee/solana-indexer"
repository = "https://github.com/adithya-adee/solana-indexer"
keywords = ["solana", "indexer", "blockchain", "web3"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
idl-build = ["dep:solana-indexer-idl"]
laserstream = ["dep:tonic", "dep:yellowstone-grpc-proto", "dep:prost"]
websockets = ["dep:tokio-tungstenite"]
helius = ["websockets"]
telemetry = ["dep:tracing-subscriber"]
opentelemetry = [
    "telemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
anchor-lang = "0.30"
async-trait = "0.1.89"
borsh = "1.0"
chrono = "0.4"
dotenvy = "0.15.7"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }
rayon = "1.11.0"
tokio-util = { version = "0.7.18", features = ["full"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"], optional = true }
yellowstone-grpc-proto = { version = "1.14.0", optional = true }
prost = { version = "0.12", optional = true }
bs58 = "0.5"
solana-account-decoder = "1.18.26"
bincode = "1.3"
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"], optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[build-dependencies]
solana-indexer-idl = { path = "../solana-indexer-idl", version = "0.1.0", optional = true }

[dev-dependencies]
honggfuzz = "0.5"
arbitrary = { version = "1.0", features = ["derive"] }
quinn-proto = { version = "0.10", features = ["arbitrary"] }
wiremock = "0.6.5"
